# opengl_sandbox

./: Cargo.toml  build.rs
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: main.rs  render_gl.rs  resources.rs
